src/test/deca/syntax/valid/custom/decl_init_int.deca
// Description:
//   Declaration and initialisation of two ints.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   int i, j = 1;
}
